--- a/.gitignore
+++ b/.gitignore
@@ -81,7 +81,8 @@ target/
 # IPython
 profile_default/
 ipython_config.py
-
+*example*.py
+*cache*.db
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
@@ -93,12 +94,6 @@ ipython_config.py
 #   having no cross-platform support, pipenv may install dependencies that don't work, or not
 #   install all needed dependencies.
 #Pipfile.lock
-
-# UV
-#   Similar to Pipfile.lock, it is generally recommended to include uv.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#uv.lock
 
 # poetry
 #   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
@@ -112,10 +107,8 @@ ipython_config.py
 #pdm.lock
 #   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
 #   in version control.
-#   https://pdm.fming.dev/latest/usage/project/#working-with-version-control
+#   https://pdm.fming.dev/#use-with-ide
 .pdm.toml
-.pdm-python
-.pdm-build/
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
@@ -162,33 +155,82 @@ cython_debug/
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+#  be added to the global gitignore or merged into this project gitignore.  For a PyCharm
+#  project, it is recommended to add this to your global gitignore.
+.idea/
 
-# Abstra
-# Abstra is an AI-powered process automation framework.
-# Ignore directories containing user credentials, local state, and settings.
-# Learn more at https://abstra.io/docs
-.abstra/
+# VS Code
+.vscode/
 
-# Visual Studio Code
-#  Visual Studio Code specific template is maintained in a separate VisualStudioCode.gitignore 
-#  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
-#  and can be added to the global gitignore or merged into this file. However, if you prefer, 
-#  you could uncomment the following to ignore the enitre vscode folder
-# .vscode/
+# Mac OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# Ruff stuff:
-.ruff_cache/
+# Windows
+*.tmp
+*.temp
+*.bak
+*.swp
+*~.nib
+local.properties
 
-# PyPI configuration file
-.pypirc
+# Project specific
+# Model files and checkpoints
+*.pt
+*.pth
+*.ckpt
+*.bin
+*.safetensors
+model_cache/
+*.duckdb
+#models/
+checkpoints/
 
-# Cursor
-#  Cursor is an AI-powered code editor. `.cursorignore` specifies files/directories to
-#  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
-#  refer to https://docs.cursor.com/context/ignore-files
-.cursorignore
-.cursorindexingignore
+# Data files
+data/
+# eval_datasets/
+*.csv
+*.json
+*.jsonl
+*.parquet
+*.h5
+*.hdf5
+test*.py
+# Results and outputs
+results/
+outputs/
+logs/
+wandb/
+mlruns/
+.neptune/
+
+# Evaluation results
+benchmark_results/
+evaluation_results/
+model_comparison/
+
+# Jupyter notebook outputs
+# *.ipynb
+
+# Temporary files
+temp/
+tmp/
+*.tmp
+
+# API keys and secrets
+.env.local
+.env.production
+.env.staging
+secrets.json
+api_keys.txt
+
+# Specific to this project
+**/examples/results/
+**/results/
+inference_results/
+evaluation_logs/ 
