--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,11 +24,12 @@ dependencies = [
     "tqdm>=4.64.0",
     "transformers>=4.52.0",
     "weave>=0.50.0",
+    "numpy>=2.2.6"
 ]
 
 [dependency-groups]
 dev = [
-    "mteb>=1.38.32",
+    "ruff>=0.12.0",
 ]
 
 # Install the current package in editable mode
