--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,9 @@ dependencies = [
     "tqdm>=4.64.0",
     "transformers>=4.52.0",
     "weave>=0.50.0",
-    "numpy>=2.2.6"
+    "numpy>=2.2.6",
+    "librosa>=0.11.0",
+    "onnxruntime>=1.22.0",
 ]
 
 [dependency-groups]
