Add interactive mode

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "librosa>=0.11.0",
     "onnxruntime>=1.22.0",
     "indic-nlp-library>=0.92",
+    "simple-term-menu>=1.6.6",
 ]
 
 [dependency-groups]
