--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -34,7 +34,7 @@ jobs:
         run: uv sync --group docs
 
       - name: Build MkDocs
-        run: uv run mkdocs build --strict
+        run: uv run mkdocs build
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
