--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Install dependencies
         run: uv sync --group docs
 
+      - name: Generate registry documentation
+        run: uv run python scripts/generate_registry_docs.py
+
       - name: Build MkDocs
         run: uv run mkdocs build
 
