--- a/docs_v2/package.json
+++ b/docs_v2/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@astrojs/starlight": "^0.35.0",
     "astro": "^5.6.1",
+    "astro-mermaid": "^1.0.4",
+    "mermaid": "^11.9.0",
     "sharp": "^0.34.2",
     "starlight-llms-txt": "^0.5.1"
   }
