--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -1,43 +1,39 @@
-# This workflow will upload a Python Package using Twine when a release is created
-# For more information see: https://help.github.com/en/actions/language-and-framework-guides/using-python-with-github-actions#publishing-to-package-registries
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: PyPI Publish
+name: Publish to PyPI
 
 on:
-  workflow_dispatch:
   push:
-    # Pattern matched against refs/tags
     tags:
-      - 'v*'           # Push events to every version tag
-
-env:
-  UV_PUBLISH_TOKEN: '${{ secrets.PYPI_API_TOKEN }}'
+      - 'v*'
+  release:
+    types: [published]
+  workflow_dispatch:
 
 jobs:
-  build:
-
+  build-and-publish:
+    name: Build and publish Python package
     runs-on: ubuntu-latest
-
+    permissions:
+      id-token: write
+      contents: read
+    
     steps:
-    - uses: actions/checkout@v2
-
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.12.x'
-
-    - name: Install dependencies
-      run: |
-        python -m pip install uv
-        uv sync
-
+        python-version: '3.10'
+        
+    - name: Install uv
+      uses: astral-sh/setup-uv@v4
+      with:
+        enable-cache: true
+        
     - name: Build package
       run: uv build
-
-    - name: Publish package
-      run: uv publish
+      
+    - name: Publish to PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        attestations: true
