--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "karma-medeval"
-version = "0.1.2"
+version = "0.1.3"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -13,10 +13,8 @@ dependencies = [
     "evaluate>=0.4.0",
     "mysql-connector-python>=9.3.0",
     "pillow>=11.1.0",
-    "pytest>=8.4.1",
     "python-dotenv>=1.1.0",
     "rich>=13.0.0",
-    "ruff>=0.12.0",
     "scikit-learn>=1.3.0",
     "torch>=2.7.1",
     "tqdm>=4.64.0",
@@ -28,26 +26,13 @@ dependencies = [
     "openai>=1.93.0",
     "requests>=2.32.4",
     "simple-term-menu>=1.6.6",
+    "ipython>=8.37.0",
 ]
 
 [project.urls]
 Repository = "https://github.com/eka-care/KARMA-OpenMedEvalKit"
 Documentation = "https://karma.eka.care"
 
-[dependency-groups]
-dev = [
-    "ipywidgets>=8.1.7",
-    "line-profiler>=4.2.0",
-    "ruff>=0.12.0",
-]
-docs = [
-    "mkdocs>=1.5.0",
-    "mkdocs-material>=9.0.0",
-    "mkdocstrings[python]>=0.24.0",
-    "mkdocs-llmstxt>=0.1.0",
-]
-
-# Install the current package in editable mode
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
@@ -56,18 +41,22 @@ build-backend = "setuptools.build_meta"
 karma = "karma.cli.main:main"
 
 [project.optional-dependencies]
+dev = [
+    "pytest>=8.4.1",
+    "ruff>=0.12.0",
+    "ipywidgets>=8.1.7",
+    "line-profiler>=4.2.0",
+]
+
 audio = [
     "elevenlabs>=2.5.0",
     "indic-nlp-library>=0.92",
     "langdetect>=1.0.9",
-     "indic-transliteration>=2.0.0",
+    "indic-transliteration>=2.0.0",
     "editdistance>=0.8.1",
     "google-transliteration-api>=1.0.3",
     "jiwer>=4.0.0",
-    "langdetect>=1.0.9",
     "num2words>=0.5.14",
     "torchaudio>=2.7.1",
-    "google-transliteration-api>=1.0.3",
-    "num2words>=0.5.14",
     "librosa>=0.11.0",
 ]
