--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ build-backend = "setuptools.build_meta"
 [project.scripts]
 karma = "karma.cli.main:main"
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
     "pytest>=8.4.1",
     "ruff>=0.12.0",
@@ -56,9 +56,9 @@ audio = [
     "editdistance>=0.8.1",
     "google-transliteration-api>=1.0.3",
     "jiwer>=4.0.0",
-    "num2words>=0.5.14",
     "torchaudio>=2.7.1",
     "librosa>=0.11.0",
+    "num2words>=0.5.14",
 ]
 
 # This enables pip install karma[all]
