--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "requests>=2.32.4",
     "simple-term-menu>=1.6.6",
     "ipython>=8.37.0",
+    "pip>=25.1.1",
 ]
 
 [project.urls]
