--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ dependencies = [
     "requests>=2.32.4",
     "simple-term-menu>=1.6.6",
     "ipython>=8.37.0",
+    "pytrec-eval-terrier>=0.5.7",
+    "sentence-transformers>=5.0.0",
+    "faiss-cpu>=1.11.0.post1",
 ]
 
 [project.urls]
