Minor import fix

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "pytrec-eval-terrier>=0.5.7",
     "sentence-transformers>=5.0.0",
     "faiss-cpu>=1.11.0.post1",
+    "hf_transfer==0.1.9"
 ]
 
 [project.urls]
